# ArcanumLauncher

./: .gitignore  README.md  package-lock.json  prelude.rs  purchase.rs  users.rs
api/: .env  Cargo.toml  games.rs  purchase.rs  users.rs
api/database/: games.sql  init.sql  insert.sql  purchase.sql  user_library.sql  users.sql
api/src/: bytes.rs  crud.rs  game.rs  main.rs  security.rs  user.rs
api/src/entities/: games.rs  mod.rs  prelude.rs  user_library.rs  users.rs
rust/: index.html  package-lock.json  package.json
rust/public/: token.txt
rust/src/: main.js  style.css
rust/src-tauri/: Cargo.toml  tauri.conf.json
rust/src-tauri/src/: main.rs
rust/src/components/: Aside.vue  Auth.vue  Changes.vue  Game.vue  Lib.vue  Mag.vue  Main.vue  Profile.vue  Registration.vue  VideoPlayer.vue  lib_game.vue
rust/src/router/: index.js
